feat: Implement Removal Tool UI and logic

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link" data-tool="background-tool">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 12.5c0-5.25-3.75-9.5-8.5-9.5s-8.5 4.25-8.5 9.5c0 5.02 3.2 9.22 7.5 9.47v-4.02c-1.5-.2-2.5-1.48-2.5-3.05 0-1.77 1.43-3.2 3.2-3.2s3.2 1.43 3.2 3.2c0 1.57-1 2.85-2.5 3.05v4.02c4.3-.25 7.5-4.45 7.5-9.47z"/><path d="M4.5 9.5c0-2.21 1.79-4 4-4s4 1.79 4 4-1.79 4-4 4-4-1.79-4-4z"/></svg>
-                        <span>Background Tool</span>
+                    <a href="#" class="nav-link" data-tool="removal-tool">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8.38"/><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/></svg>
+                        <span>Removal Tool</span>
                     </a>
                 </li>
                  <li>
@@ -91,20 +91,20 @@
                 </div>
             </section>
 
-            <!-- Tool Section: Background Tool (Placeholder) -->
-            <section id="background-tool" class="tool-section hidden">
-                <div class="w-full max-w-3xl mx-auto">
+            <!-- Tool Section: Removal Tool -->
+            <section id="removal-tool" class="tool-section hidden">
+                 <div class="w-full max-w-3xl mx-auto">
                     <header class="tool-header">
-                        <h2 class="text-3xl font-bold">Background Tool</h2>
-                        <p class="text-lg text-secondary">Remove or replace the background of any image.</p>
+                        <h2 class="text-3xl font-bold">Removal Tool</h2>
+                        <p class="text-lg text-secondary">Remove the background or specific objects from your image.</p>
                     </header>
-                    <div class="main-container p-6 text-center">
-                        <p>Background Tool UI coming soon!</p>
+                    <div class="main-container p-6">
+                        <!-- This section will be managed by JS to show upload/edit/result -->
                     </div>
                 </div>
             </section>
 
-             <!-- Tool Section: Style Transfer (Placeholder) -->
+            <!-- Tool Section: Style Transfer (Placeholder) -->
             <section id="style-transfer" class="tool-section hidden">
                 <div class="w-full max-w-3xl mx-auto">
                     <header class="tool-header">
@@ -116,7 +116,6 @@
                     </div>
                 </div>
             </section>
-
         </main>
     </div>
 
