--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     </a>
                 </li>
                  <li>
-                    <a href="#" class="nav-link" data-tool="style-transfer">
-                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"/><path d="m5 12h14"/></svg>
-                        <span>Style Transfer</span>
+                    <a href="#" class="nav-link" data-tool="artify">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"/><path d="m5 12h14"/></svg>
+                        <span>Artify</span>
                     </a>
                 </li>
             </ul>
@@ -43,50 +43,14 @@
         <!-- Main Content Area -->
         <main class="main-content">
             <!-- Tool Section: Prompt Edit -->
-            <section id="prompt-edit" class="tool-section active">
-                <div id="prompt-edit-container" class="w-full max-w-3xl mx-auto">
+            <section id="prompt-edit" class="tool-section">
+                <div class="w-full max-w-3xl mx-auto">
                      <header class="tool-header">
                         <h2 class="text-3xl font-bold">Prompt Edit</h2>
                         <p class="text-lg text-secondary">Use natural language to transform your image.</p>
                     </header>
-                    <div id="prompt-edit-main" class="main-container p-6">
-                        <section id="prompt-edit-upload-view">
-                            <input type="file" id="image-input" class="hidden" accept="image/*" />
-                            <div id="dropzone" class="dropzone rounded-lg p-10 text-center cursor-pointer">
-                                <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true"><path d="M28 8H12a4 4 0 00-4 4v20m32-20a4 4 0 014 4v20a4 4 0 01-4 4H12a4 4 0 01-4-4V12a4 4 0 014-4h4l2-4h8l2 4h4z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><circle cx="24" cy="24" r="4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></circle></svg>
-                                <p class="mt-4 text-lg font-medium">Click to upload or drag & drop</p>
-                                <p class="text-sm text-secondary mt-1">PNG, JPG, or WEBP. Max 8MB.</p>
-                            </div>
-                        </section>
-                        <section id="prompt-edit-edit-view" class="hidden">
-                             <div class="mb-4"><img id="image-preview" src="#" alt="Your uploaded image" class="rounded-lg w-full object-contain border border-primary p-1"></div>
-                            <div>
-                                <label for="prompt-input" class="block text-sm font-bold mb-2">Describe your edit:</label>
-                                <textarea id="prompt-input" rows="3" class="w-full p-2 border border-primary rounded-md bg-transparent focus:ring-2 focus:ring-accent-primary focus:outline-none transition" placeholder="e.g., Change the corgi into a felt wool figure"></textarea>
-                            </div>
-                            <div class="mt-4 flex space-x-2">
-                                <button id="generate-button" class="btn-primary w-full py-2.5 rounded-md flex items-center justify-center"><span id="generate-button-text">Generate</span><div id="generate-loader" class="loader w-5 h-5 rounded-full border-2 hidden ml-2"></div></button>
-                                <button id="reset-button" class="bg-gray-200 dark:bg-gray-700 text-primary px-4 rounded-md font-semibold">Reset</button>
-                            </div>
-                        </section>
-                        <section id="prompt-edit-result-view" class="hidden space-y-4">
-                            <div>
-                                <h3 class="text-lg font-bold mb-1 text-center">Your masterpiece is ready!</h3>
-                                <p id="result-prompt" class="text-center text-sm text-secondary italic break-words"></p>
-                            </div>
-                            <div>
-                                <label class="block text-sm font-bold text-secondary mb-2">Original</label>
-                                <img id="before-image-result" src="#" class="rounded-lg border border-primary w-full">
-                            </div>
-                            <div>
-                                <label class="block text-sm font-bold text-secondary mb-2">Edited</label>
-                                <img id="after-image-result" src="#" class="rounded-lg border border-primary w-full">
-                            </div>
-                            <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 pt-2">
-                                <button id="download-button" class="btn-secondary w-full py-2.5 rounded-md text-center cursor-pointer">Download</button>
-                                <button id="new-edit-button" class="bg-gray-200 dark:bg-gray-700 text-primary w-full py-2.5 rounded-md font-bold">New Edit</button>
-                            </div>
-                        </section>
+                    <div class="main-container p-6">
+                        <!-- Content is dynamically rendered by script.js -->
                     </div>
                 </div>
             </section>
@@ -99,20 +63,20 @@
                         <p class="text-lg text-secondary">Remove the background or specific objects from your image.</p>
                     </header>
                     <div class="main-container p-6">
-                        <!-- This section will be managed by JS to show upload/edit/result -->
+                        <!-- Content is dynamically rendered by script.js -->
                     </div>
                 </div>
             </section>
 
-            <!-- Tool Section: Style Transfer (Placeholder) -->
-            <section id="style-transfer" class="tool-section hidden">
+             <!-- Tool Section: Artify (Style Transfer) -->
+            <section id="artify" class="tool-section hidden">
                 <div class="w-full max-w-3xl mx-auto">
                     <header class="tool-header">
-                        <h2 class="text-3xl font-bold">Style Transfer</h2>
-                        <p class="text-lg text-secondary">Apply any artistic style to your image.</p>
+                        <h2 class="text-3xl font-bold">Artify</h2>
+                        <p class="text-lg text-secondary">Transform your image with creative styles.</p>
                     </header>
-                    <div class="main-container p-6 text-center">
-                        <p>Style Transfer UI coming soon!</p>
+                    <div class="main-container p-6">
+                         <!-- Content is dynamically rendered by script.js -->
                     </div>
                 </div>
             </section>
