fix: Restore script.js and add Artify tool UI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
                  <li>
                     <a href="#" class="nav-link" data-tool="artify">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"/><path d="m5 12h14"/></svg>
+                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"/><path d="m5 12h14"/></svg>
                         <span>Artify</span>
                     </a>
                 </li>
@@ -43,7 +43,7 @@
         <!-- Main Content Area -->
         <main class="main-content">
             <!-- Tool Section: Prompt Edit -->
-            <section id="prompt-edit" class="tool-section">
+            <section id="prompt-edit" class="tool-section active">
                 <div class="w-full max-w-3xl mx-auto">
                      <header class="tool-header">
                         <h2 class="text-3xl font-bold">Prompt Edit</h2>
@@ -60,7 +60,7 @@
                  <div class="w-full max-w-3xl mx-auto">
                     <header class="tool-header">
                         <h2 class="text-3xl font-bold">Removal Tool</h2>
-                        <p class="text-lg text-secondary">Remove the background or specific objects from your image.</p>
+                        <p class="text-lg text-secondary">Remove backgrounds, objects, or watermarks.</p>
                     </header>
                     <div class="main-container p-6">
                         <!-- Content is dynamically rendered by script.js -->
