fix: Complete JS refactor to fix navigation and add Artify tool

--- a/index.html
+++ b/index.html
@@ -40,46 +40,9 @@
             </div>
         </nav>
 
-        <!-- Main Content Area -->
-        <main class="main-content">
-            <!-- Tool Section: Prompt Edit -->
-            <section id="prompt-edit" class="tool-section active">
-                <div class="w-full max-w-3xl mx-auto">
-                     <header class="tool-header">
-                        <h2 class="text-3xl font-bold">Prompt Edit</h2>
-                        <p class="text-lg text-secondary">Use natural language to transform your image.</p>
-                    </header>
-                    <div class="main-container p-6">
-                        <!-- Content is dynamically rendered by script.js -->
-                    </div>
-                </div>
-            </section>
-
-            <!-- Tool Section: Removal Tool -->
-            <section id="removal-tool" class="tool-section hidden">
-                 <div class="w-full max-w-3xl mx-auto">
-                    <header class="tool-header">
-                        <h2 class="text-3xl font-bold">Removal Tool</h2>
-                        <p class="text-lg text-secondary">Remove backgrounds, objects, or watermarks.</p>
-                    </header>
-                    <div class="main-container p-6">
-                        <!-- Content is dynamically rendered by script.js -->
-                    </div>
-                </div>
-            </section>
-
-             <!-- Tool Section: Artify (Style Transfer) -->
-            <section id="artify" class="tool-section hidden">
-                <div class="w-full max-w-3xl mx-auto">
-                    <header class="tool-header">
-                        <h2 class="text-3xl font-bold">Artify</h2>
-                        <p class="text-lg text-secondary">Transform your image with creative styles.</p>
-                    </header>
-                    <div class="main-container p-6">
-                         <!-- Content is dynamically rendered by script.js -->
-                    </div>
-                </div>
-            </section>
+        <!-- Main Content Area: Now completely managed by JavaScript -->
+        <main class="main-content" id="main-content">
+            <!-- JS will render the active tool here -->
         </main>
     </div>
 
