fix!: Repair JS crash, implement robust prompt engineering, and add progress bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         </main>
     </div>
 
+    <!-- Templates for dynamic rendering -->
+    <template id="tool-template">
+        <header class="tool-header">
+            <h2 class="tool-title text-3xl font-bold"></h2>
+            <p class="tool-subtitle text-lg text-secondary"></p>
+        </header>
+        <div class="main-container p-6">
+            <!-- Specific view content goes here -->
+        </div>
+    </template>
+
     <script src="script.js" defer></script>
 </body>
 </html>
