--- a/index.html
+++ b/index.html
@@ -10,33 +10,25 @@
 <body class="min-h-screen">
 
     <div class="app-layout">
+        <!-- Sidebar Navigation -->
         <nav class="sidebar">
             <div class="sidebar-header"><h1 class="text-2xl font-bold">Kamuy ✨</h1></div>
             <ul class="sidebar-menu">
                 <li><a href="#" class="nav-link active" data-tool="prompt-edit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg><span>Prompt Edit</span></a></li>
                 <li><a href="#" class="nav-link" data-tool="removal-tool"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8.38"/><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/></svg><span>Removal Tool</span></a></li>
                 <li><a href="#" class="nav-link" data-tool="artify"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"/><path d="m5 12h14"/></svg><span>Artify</span></a></li>
+                <li><a href="#" class="nav-link" data-tool="precision-edit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3 16.828V21h4.172l14-14.188z"/><path d="m15 5 3 3"/></svg><span>Precision Edit</span></a></li>
             </ul>
             <div class="sidebar-footer"><button id="theme-toggle" class="p-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors"></button></div>
         </nav>
 
+        <!-- Main Content Area -->
         <main class="main-content">
             <div id="content-container" class="w-full max-w-3xl mx-auto">
                 <!-- All tool UIs will be injected here by script.js -->
             </div>
         </main>
     </div>
-
-    <!-- Templates for dynamic rendering -->
-    <template id="tool-template">
-        <header class="tool-header">
-            <h2 class="tool-title text-3xl font-bold"></h2>
-            <p class="tool-subtitle text-lg text-secondary"></p>
-        </header>
-        <div class="main-container p-6">
-            <!-- Specific view content goes here -->
-        </div>
-    </template>
 
     <script src="script.js" defer></script>
 </body>
